<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/pecas"
        android:title="@string/pecas"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/servico"
        android:title="@string/servico"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/contato"
        android:title="@string/contato"
        app:showAsAction="always"
        />


    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_search"
        />


    <item
    android:id="@+id/action_update"
    android:icon="@android:drawable/ic_menu_more"
    android:title="@string/action_update"
    app:showAsAction="ifRoom"

    />

    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_add"
        app:showAsAction="ifRoom"

        />

    <item
        android:id="@+id/action_configurations"
        android:title="@string/action_configurations"
        app:showAsAction="never"

        />

</menu>